# OpenROAD

./: .gitignore  CMakeLists.txt  run.tcl  run_testcase1.sh
include/ord/: readTech.h
src/: CMakeLists.txt  OpenRoad.cc  ReleaseMain.cpp  readTech.cpp
src/dpl/: CMakeLists.txt
src/dpl/include/dpl/: MakeOpendp.h  Opendp.h
src/dpl/src/: GridMap.h  LocSolver.h  MakeOpendp.cpp  Opendp.cpp  Opendp.i  Optdp.cpp  Place.cpp  dbuPoint.h  gridMap.cpp  legalizeMLL.cpp  legalize_shift.cxx  legalize_shift.h  mbff.cpp  mbff.h
src/dpl/src/cad2025_blockage/: blockage.cpp  blockage.h
src/dpl/src/infrastructure/: Coordinates.h  Objects.cpp  Objects.h  Tile.cpp  Tile.h  network.cxx
src/dpl/src/optimization/: detailed_manager.cxx  detailed_manager.h
src/gpl/: CMakeLists.txt
src/gpl/include/gpl/: Replace.h
src/gpl/src/: MakeReplace.cpp  Point.h  cBin.h  clusterBase.h  clusterBinGrid.h  fftsg2d.cpp  initialPlace.cpp  mbff.cpp  mbff.h  nesterovBase.cpp  nesterovBase.h  nesterovPlace.cpp  placerBase.cpp  placerBase.h  replace.cpp  replace.i  replace.tcl
src/gpl/src/cluster_ext/: BinGrid.cpp  PMBFF.cpp  clusterBase.cpp
src/gpl/test/: gpl_aux.py
src/odb/include/odb/: db.h
src/odb/src/db/: dbMaster.cpp
